<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_sdk_examples</name>
  <version>0.1.0</version>
  <description>The dynamixel_sdk_examples package</description>

  <author email="zerom@robotis.com">zerom</author> -->
  <maintainer email="zerom@robotis.com">zerom</maintainer>

  <license>Apache 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dynamixel_sdk_simple_example</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>dynamixel_sdk_ros</depend> -->
  <build_depend>message_generation</build_depend>
  <build_depend>dynamixel_sdk_ros</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamixel_sdk_ros</exec_depend>

</package>
